--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta name="keywords" content="example, website, products, showcase, demonstration">
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
